# q2-aligners

./: .gitattributes  script.py  setup.cfg  setup.py
example_data/: MANIFEST
q2_aligners/: _version.py  execution.py  plugin_setup.py
q2_aligners/actions/bowtie2/: __init__.py
q2_aligners/actions/bwa/: __init__.py  bwa_mem.py
q2_readmappers/: __init__.py  _version.py  plugin_setup.py
q2_readmappers.egg-info/: PKG-INFO  SOURCES.txt
q2_readmappers/actions/bwa/: __init__.py  bwa_mem.py  reference_index.py
