[metadata]
name = q2-aligners
url = github.com/CRideTGen/q2-aligners
license = Academic and Research License
author = Chase Ridenour
author_email = cridenour@tgen.org
description = aligners

[options]
package =
	find:
python_requires = >=3.6
zip_safe = no

[options.entry_points]
qiime2.plugins =
	q2-aligners = q2_aligners.plugin_setup:plugin


[versioneer]
VCS = git
style = pep440
versionfile_source = q2_aligners/_version.py
versionfile_build = q2_aligners/_version.py
tag_prefix =
parentdir_prefix = q2-aligners